argocd/apps/erin-apps/bsky-pds/sea1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pds
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "sea1-traefik-k8s.generalprogramming.org"
spec:
  rules:
    - host: atproto-pds.owo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pds
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pds-wildcard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "1"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "sea1-traefik-k8s.generalprogramming.org"
spec:
  rules:
    - host: "*.owo.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pds
                port:
                  number: 80
---
